# db-query

./: README.md
backend/: credit-data.json  db.py  llm.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatBubble.tsx  message.tsx
